[metadata]
name = MOF
version = 0.0.2
author = Worawit Jitpakdeebodin
author_email = retpoc4391@hotmail.com
description = A Python package of Mass-ratio-variance Outlier Factor (MOF)
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sechronus22/MOF
project_urls =
    Bug Tracker = https://github.com/sechronus22/MOF/issues
    repository = https://github.com/sechronus22/MOF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
